--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 client/node_modules
 server/.env
 server/node_modules
-
+client/package-lock.json
+server/package-lock.json
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
