--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Comuni backend",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js "
   },
   "author": "Valdas Manzrimas",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.3"
+    "mongoose": "^7.3.3",
+    "nodemon": "^3.0.1"
   }
 }
