--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "yup": "^1.2.0"
   }
 }
