--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.19.0",
